Javadoc fix and gradle initial configuration.

--- a/camera2helperlib/build.gradle
+++ b/camera2helperlib/build.gradle
@@ -1,4 +1,30 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+ext{
+    bintrayRepo = 'Camera2Helper'
+    bintrayName = 'Camera2Helper'
+
+    libraryName = 'camera2helper'
+
+
+    publishedGroupId = 'com.danielebachicchi'
+    artifact = 'camera2helper'
+    libraryVersion = '0.0.1'
+
+    libraryDescription = 'Helper class for the use of Android Camera2 functionality.'
+    siteUrl = ''
+    gitUrl = 'https://github.com/Badge87'
+    developerId = 'badge87'
+    developerName = 'Daniele Bachicchi'
+    developerEmail = 'daniele.bachicchi@gmail.com'
+    licenseName = 'The Apache Software License, version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0'
+    allLicenses = ['Apache-2.0']
+
+
+}
 
 android {
     compileSdkVersion 28
@@ -9,7 +35,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -31,4 +57,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+repositories{
+    mavenCentral()
+}
+
+if(project.rootProject.file('local.properties').exists()){
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
 }
